# OxydHarmonics

./: .gitignore  README.md
apps/api/: pyproject.toml  run_api.sh
apps/api/api/: api.py  main.py
apps/api/api/controllers/: CallLinearModelController.py  Controller.py  IndexGetController.py
apps/api/api/routes/: index.py  models.py  status.py
apps/nextjs/: package.json  pnpm-lock.yaml
modules/core/: pyproject.toml
modules/core/core/useCases/callLinearModel/: CallLinearModelUseCase.py  test.py
modules/ml/: README.md  pyproject.toml
modules/ml/ml/models/linear/: [Notebook] Cas de tests pour le Modèle linéaire et le PMC.ipynb  deprecated_linear_model_regression-TestCase_2Dsimple.ipynb  deprecated_linear_model_regression.ipynb  lib.py  linear_classification_OxydHarmonics.ipynb  linear_classification_TestCase.ipynb  linear_model.ipynb  linear_model_regression.ipynb  linear_regression_TestCase.ipynb  linear_save_load_test.ipynb  linear_tests.ipynb
modules/ml/ml/models/linear/OxydDataset_32_1/: acappella_test.csv  accoust_test.csv  electro_test.csv
modules/ml/ml/models/mlp/: lib.py  mlp_tests.ipynb  oxyd_alpha.model  oxyd_prod.ipynb  oxyd_training.ipynb
modules/ml/ml/models/pmc/: labo.ipynb  lib.ipynb  lib.py
modules/ml/ml/models/rbf/: lib.py
modules/ml/ml_core/: Cargo.toml
modules/ml/ml_core/src/: kmeans.rs  lib.rs  lib_rbf.rs  models.rs  pmc_model.rs  rbf_net.rs
modules/ml/ml_core/src/models/: linear.rs  linear_arys.rs  mlp.rs  rbf.rs
modules/ml/ml_core/src/utils/: vec.rs
src/apps/classifier/: Makefile  README.md  docker-compose.yml
src/apps/classifier/api/: Dockerfile  pyproject.toml
src/apps/classifier/api/src/app/: api.py  main.py
src/apps/classifier/api/src/app/controllers/: StatusGetController.py
src/apps/classifier/api/src/app/routes/: index.py  status.py
src/apps/classifier/interface/web/: Dockerfile  package-lock.json
src/core/domain/: Model.py
src/libs/ml/: Cargo.toml
src/libs/ml/dataset/: simple_linear.txt  test_no_bias.txt  test_no_bias2.txt
src/libs/ml/src/: Cas_de_tests_Modele_lineaire_PMC.ipynb  interop_linear.ipynb  lib.rs  linear_model.rs  math_utils.rs  my_interop.ipynb  my_interop.py  pmc_model.rs
