[package]
name = "ml_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.26"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.164"
tensorboard-rs = "0.5.9"


[[bin]]
name = "pmc_model"
path = "src/pmc_model.rs"
