[package]
name = "ml_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib_rbf.rs"

[dependencies]
nalgebra = "0.32.2"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
tensorboard-rs = "0.5.9"

[[bin]]
name = "kmeans"
path = "src/rbf_net.rs"


