[package]
name = "ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
tensorboard-rs = "0.5.9"
ndarray-rand = "0.14.0"

[[bin]]
name = "pmc_model"
path = "src/pmc_model.rs"

[[bin]]
name = "linear_model"
path = "src/linear_model.rs"
